# origa

./: .dockerignore  .gitattributes  .gitignore  .hadolint.yaml  .markdownlint-cli2.jsonc  .markdownlintignore  .rustfmt.toml  .shellcheckrc  .taurignore  AGENTS.md  Cargo.toml  DESIGN.md  Dioxus.toml  LICENSE  ONBOARDING_ANALYSIS_REPORT.md  ONBOARDING_FIXES.md  README.md  README.ru.md  RELEASE.md  TRAILBASE_SETUP.md  Untitled  analyze_evaluation_results.py  arch.c4  build_defaults.rs  clippy.toml  config.toml  design.html  design.md  duolingo.md  duplicate_report.json  e2e-results.txt  evaluate_translations.py  feature-map.md  feature.md  filtered_invalid.json  firebase_setup.md  garbage_report.json  invalid_vocabulary.jsonl  jp_repetition_report.json  kana-report.md  (+22 more)
keikaku/: Cargo.toml
keikaku/src/: settings.rs
keikaku/src/application/: duolingo_client.rs  llm_service.rs  migii_client.rs  mod.rs  srs_service.rs  translation_service.rs  use_cases.rs  user_repository.rs
keikaku/src/domain/: daily_history.rs  error.rs  furigana.rs  furiganizer.rs  japanese.rs  kanji_card.rs  mod.rs  review.rs  settings.rs  study_session.rs  tokenizer.rs  user.rs  value_objects.rs  vocabulary_card.rs
keikaku/src/infrastructure/: candle_translation.rs  duolingo_client.rs  mod.rs  srs.rs  user_repository.rs
keikaku_ui/: Cargo.toml  Dioxus.toml  README.md
keikaku_ui/assets/: tailwind.css  ui-styles.css
keikaku_ui/assets/styles/: base.css  tokens.css
keikaku_ui/src/: keikaku_api.rs  main.rs
keikaku_ui/src/components/: button.rs  card.rs  cards.rs  chart.rs  dashboard.rs  error.rs  hero.rs  input.rs  keyboard.rs  loading.rs  mod.rs  select.rs  typography.rs
keikaku_ui/src/domain/: card_answer.rs  card_filters.rs  card_header.rs  card_list.rs  card_stats.rs  cards.rs  dashboard.rs  furigana_text.rs  kanji_card.rs  mod.rs  popular_word_card.rs  popular_words_grid.rs  radical_card.rs  radical_grid.rs  rating_buttons.rs  word_card.rs
keikaku_ui/src/hooks/: learn.rs  mod.rs  overview.rs  translate.rs
keikaku_ui/src/ui/: button.rs  card.rs  chart.rs  dashboard.rs  empty_state.rs  error.rs  grid.rs  heatmap.rs  hero.rs  icon.rs  icon_button.rs  info_grid.rs  info_section.rs  input.rs  labeled_select.rs  layout.rs  mod.rs  modal.rs  notification.rs  progress_bar.rs  select.rs  stat_card.rs  toggle.rs  typography.rs
keikaku_ui/src/utils/: overview.rs
keikaku_ui/src/views/: anki.rs  blog.rs  duolingo.rs  import.rs  jlpt.rs  kanji.rs  migii.rs  mod.rs  navbar.rs  rebuild.rs  showcase.rs  translate.rs
ndlocr-lite/: .gitignore  README.md  pyproject.toml  requirements.txt
ndlocr-lite/src/: deim.py  ndl_parser.py  ocr.py  parseq.py  tablerecog.py
ndlocr-lite/src/config/: NDLmoji.yaml  ndl.yaml  ops.py
ndlocr-lite/src/tools/: ndlkoten2tei.py
origa/: .markdownlint.json  AGENTS.md  Cargo.toml  build.rs  cargo-make.toml  update_jlpt_words.py
origa/src/: lib.rs  ort_init.rs  settings.rs
origa/tests/: corpus_audit.rs  grammar_content_audit.rs  grammar_format_audit.rs  grammar_regression_checks.rs  integration_tests.rs  kanji_descriptions_audit.rs  translation_smoke.rs  well_known_sets_audit.rs
origa_landing/: .gitignore  Cargo.toml  Dockerfile  Justfile  build.rs  build_config.rs  package-lock.json  package.json  tailwind.config.js
origa_landing/public/: browserconfig.xml  llms.txt  robots.txt  sitemap.xml  sitemap.xml.tmpl
origa_landing/src/: app.rs  lib.rs  main.rs  server.rs
origa_landing/style/: input.css  landing.css  landing.processed.css
origa_landing/tests/: blog.rs  build_config.rs  cache_headers.rs  locale_negotiate.rs  not_found.rs  redirect.rs  security_headers.rs  seo_meta.rs  sitemap.rs
origa_ui/: .dockerignore  .stylelintrc.json  AGENTS.md  Caddyfile  Cargo.toml  Dockerfile  IMPLEMENTATION_CHECKLIST.md  Trunk.toml  build.rs  build_config.rs  entrypoint.sh  index.html  input.css  nginx.conf  styles.css  tailwind.config.js  vercel.json
origa_ui/assets/: tailwind.css
origa_ui/icons/: icon.icns
origa_ui/locales/: en.json  ru.json
origa_ui/public/: grammar.json  manifest.json  styles.scss  sw.js
origa_ui/src/: app.rs  demo_data.rs  hooks.rs  i18n.rs  lib.rs  main.rs  ocr_model_loader.rs  repository.rs  routes.rs  updater.rs
origa_ui/tests/: build_config.rs
scripts/: TRANSLATE_README.md  _cdn_cache.py  _cdn_io.py  _cdn_s3.py  _cdn_verify.py  add_honorific_grammar_rules.py  add_i_adjective_grammar_rules.py  add_orphan_iadj_grammar_rules.py  add_related_patterns.py  add_renyokei_grammar_rule.py  apply_kanji_patches.py  audit_kanji_readings.py  bad_entries_report.json  clean_vocabulary_translations.py  clean_vocabulary_v2.py  cleanup_grammar_headers.py  cloudflare-migrate.ps1  convert_audio_to_opus.py  deduplicate_partial.py  deploy_cdn.py  detect_bad_entries.py  detect_duplicates.py  detect_jp_repetition.py  detect_ml_garbage.py  detect_profanity_phrases.py  download_yolo.py  enrich_related_words.py  enrich_vocab.py  enrich_vocabulary.py  example.md  export_transcriptions.py  extract_audio.py  final_verification.py  find_missing_vocabulary.py  fix_dict_semicolon_translations.py  fix_grammar_content.py  fix_kanji_descriptions.py  fix_phrase_translations.py  fix_pitch_targeted.py  fix_polysemic_kanji.py  (+51 more)
scripts/tests/: conftest.py  test_cdn_cache.py  test_cdn_s3.py  test_deploy_cdn.py  test_fix_grammar_content.py  test_merge_grammar_chunks.py  test_refresh_cache_control.py  test_scan_hybrid_words.py  test_validate_grammar.py
tauri/: .gitignore  Cargo.toml  android-signing.patch  build.rs  build_config.rs  package.json  tauri.conf.json
tauri/.cargo/: config.toml
tauri/capabilities/: default.json  mobile.json
tauri/icons/: icon.icns
tauri/src/: auth_store.rs  lib.rs  main.rs  test.rs  updater_commands.rs
tauri/tests/: build_config.rs
telegram/: Cargo.toml
telegram/src/: dialogue.rs  main.rs  repository.rs  service.rs  telegram_domain.rs
tokenizer/: Cargo.toml  README.md
tokenizer/config/: NDLmoji.txt
tokenizer/src/: lib.rs  main.rs
utils/: Cargo.toml  README.md
utils/src/: cli.rs  dictionary.rs  lib.rs  main.rs  signing.rs
(+2914 files in other folders)
