[workspace]
members = ["origa", "tokenizer", "origa_ui", "tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["yurvon-screamo <yurvon@ya.ru>"]
license-file = "LICENSE"
repository = "https://github.com/yurvon-screamo/origa"
readme = "README.md"

[workspace.dependencies]
# System
tokio = { version = "1.48", default-features = false, features = [
    "rt",
    "macros",
    "time",
] }
base64 = "0.22"
toml = "0.9"
tempfile = "3.25"
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
zip = { version = "8.1", default-features = false }
regex = "1.12"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"
tracing-subscriber = "0.3"

# OpenAI
async-openai-wasm = { version = "0.31", features = [
    "embedding",
    "responses",
    "batch",
    "model",
    "chat-completion",
] }

# Domain
ulid = { version = "1.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["std", "clock", "serde"] }
rand = "0.9"
thiserror = "2.0"
sha2 = "0.10"

# Japan
rs-fsrs = "1.2"
lindera = { version = "2.2", default-features = false }
lindera-dictionary = { version = "2.2" }
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "8cc682c97bcb8a76017ad23e35fde8adac639e3f", default-features = false }
candle-onnx = { git = "https://github.com/huggingface/candle.git", rev = "8cc682c97bcb8a76017ad23e35fde8adac639e3f", default-features = false }
tokenizers = { version = "0.21", default-features = false, features = ["unstable_wasm"] }
prost = "0.14"
image = "0.25"

# Origa workspace crates
origa = { path = "./origa" }
tokenizer = { path = "./tokenizer" }

# Utility
lazy_static = "1.4"
idb = "0.6"

# Testing
rstest = "0.26"

# UI
leptos = { version = "0.8", default-features = false, features = ["csr"] }
leptos_icons = "0.7"
icondata = "0.7"
pulldown-cmark = "0.12"
ammonia = "4"
scraper = "0.22"
ego-tree = "0.10"
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos-use = { version = "0.18" }
js-sys = "0.3"
codee = { version = "0.3", features = ["json_serde"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
gloo-storage = "0.3"
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }
urlencoding = "2.1"

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-build = { version = "2", features = [] }

# Dev Dependencies
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = { version = "0.4", features = [
    "futures-core-03-stream",
] }
web-sys = { version = "0.3", features = [
    "DedicatedWorkerGlobalScope",
    "DomException",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemHandle",
    "FileSystemHandleKind",
    "FileSystemHandlePermissionDescriptor",
    "FileSystemReadWriteOptions",
    "FileSystemRemoveOptions",
    "FileSystemSyncAccessHandle",
    "FileSystemWritableFileStream",
    "Navigator",
    "StorageManager",
    "WorkerNavigator",
    "File",
    "FileList",
    "FileReader",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Window",
    "Node",
    "Element",
    "Event",
    "EventTarget",
    "InputEvent",
    "console",
    "SpeechSynthesis",
    "SpeechSynthesisUtterance",
    "SpeechSynthesisVoice",
    "Cache",
    "CacheStorage",
    "Response",
    "ResponseInit",
    "Url",
] }


[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
