[package]
name = "keikaku_ui"
version = "0.1.0"
authors = ["yurvon-screamo <yurvon@ya.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keikaku = { path = "../keikaku" }
dioxus.workspace = true
dioxus-heroicons.workspace = true
tokio.workspace = true
ulid.workspace = true
imp.workspace = true
chrono.workspace = true

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
