[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ndlocr-lite"
version = "1.0.0"
description = "NDLOCR-Lite CLI Application"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
ndlocr-lite = "ocr:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["ocr", "deim", "parseq", "ndl_parser", "tablerecog"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"model" = ["*.onnx"]
"config" = ["*.yaml"]