[package]
name = "origa"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]

# System
tempfile.workspace = true
serde_json.workspace = true
zip.workspace = true
regex.workspace = true
rand.workspace = true
tokio.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Domain
ulid.workspace = true
serde.workspace = true
chrono.workspace = true

# Japan
rs-fsrs.workspace = true
lindera.workspace = true
lindera-dictionary.workspace = true
flate2.workspace = true

# OCR (NDLOCR-Lite)
ndarray = "0.17"
anyhow = "1.0"
image.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["alternative-backend"] }
ort-web = { version = "0.2.0" }
wasm-bindgen-futures = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
as-slice = "0.2"
futures = "0.3"

[dev-dependencies]
rstest.workspace = true
reqwest.workspace = true
tokio = { workspace = true, default-features = false, features = [
    "rt",
    "macros",
    "time",
    "fs",
] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
