[package]
name = "origa"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]

# System
tempfile.workspace = true
serde_json.workspace = true
rand.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Domain
ulid.workspace = true
serde.workspace = true
chrono.workspace = true

# Japan
rs-fsrs.workspace = true
lindera.workspace = true
lindera-dictionary.workspace = true
flate2.workspace = true
zip.workspace = true
rkyv.workspace = true

# OCR (NDLOCR-Lite)
ndarray.workspace = true
image.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ort = { workspace = true, default-features = true, features = [
    "download-binaries",
] }
rusqlite = { workspace = true, features = ["bundled", "serialize"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ort = { workspace = true, features = ["alternative-backend"] }
ort-web.workspace = true
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
wasm-bindgen-futures = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
as-slice.workspace = true
futures.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time", "fs"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
