[package]
name = "origa_landing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[[bin]]
name = "origa_landing"
path = "src/main.rs"
required-features = ["ssr"]

[lib]
crate-type = ["rlib"]

[dependencies]
leptos = "0.8"
leptos_meta = "0.8"
leptos_router = "0.8"
leptos_axum = "0.8"
axum = "0.8"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "origa_landing"
site-root = "target/site"
site-pkg-dir = "pkg"
env = "DEV"
bin-features = ["ssr"]
