[package]
name = "origa_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
leptos.workspace = true
leptos_icons.workspace = true
icondata.workspace = true
leptos-use.workspace = true
leptos_router.workspace = true
leptos_meta.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
web-sys.workspace = true
origa.workspace = true
ulid.workspace = true
chrono.workspace = true
gloo-storage.workspace = true
gloo-net.workspace = true
urlencoding.workspace = true
base64.workspace = true
idb.workspace = true
pulldown-cmark.workspace = true
ammonia.workspace = true
scraper.workspace = true
ego-tree.workspace = true
console_log.workspace = true
log.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true
tracing-subscriber.workspace = true
flate2 = "1.0"
futures = "0.3"
gloo-timers = "0.3"
thiserror = "2.0"
sha2.workspace = true
rand.workspace = true
bincode = "1.3"

[build-dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
lindera-dictionary = { version = "2.2", features = ["build_rs"] }
serde_json = "1.0"

[package.metadata.leptos]
site-root = "target/site"
site-pkg-dir = "pkg"

assets-dir = "public"
style-file = "input.css"
# tailwind-input = "input.css"
