[package]
name = "origa_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
leptos.workspace = true
leptos_icons.workspace = true
icondata.workspace = true
leptos-use.workspace = true
leptos_router.workspace = true
leptos_meta.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
web-sys.workspace = true
origa.workspace = true
ulid.workspace = true
chrono.workspace = true
gloo-storage.workspace = true
gloo-net.workspace = true
urlencoding.workspace = true
base64.workspace = true
idb.workspace = true
pulldown-cmark.workspace = true
ammonia.workspace = true
scraper.workspace = true
ego-tree.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true
tracing-subscriber.workspace = true
flate2.workspace = true
futures.workspace = true
gloo-timers.workspace = true
thiserror.workspace = true
sha2.workspace = true
rand.workspace = true
bincode.workspace = true

[build-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
lindera-dictionary = { workspace = true, features = ["build_rs"] }
serde_json.workspace = true

[package.metadata.leptos]
site-root = "target/site"
site-pkg-dir = "pkg"

assets-dir = "public"
style-file = "input.css"
# tailwind-input = "input.css"
