[package]
name = "origa_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "origa_ui_bin"
path = "src/main.rs"

[dependencies]
leptos.workspace = true
leptos_icons.workspace = true
icondata.workspace = true
leptos-use.workspace = true
leptos_router.workspace = true
leptos_meta.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
web-sys.workspace = true
origa.workspace = true
ulid.workspace = true
chrono.workspace = true
gloo-storage.workspace = true
gloo-net.workspace = true
urlencoding.workspace = true
url.workspace = true
base64.workspace = true
idb.workspace = true
lexical-sort.workspace = true
pulldown-cmark.workspace = true
ammonia.workspace = true
scraper.workspace = true
ego-tree.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true
tracing-subscriber.workspace = true
flate2.workspace = true
futures.workspace = true
gloo-timers.workspace = true
thiserror.workspace = true
sha2.workspace = true
rand.workspace = true
bincode.workspace = true

[features]
default = ["csr"]
csr = ["leptos/csr"]

[build-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
lindera-dictionary = { workspace = true, features = ["build_rs"] }
serde.workspace = true
serde_json.workspace = true

[package.metadata.leptos]
output-name = "origa_ui"
lib-features = ["csr"]
lib-default-features = false
lib-profile-release = "wasm-release"
site-root = "target/site"
site-pkg-dir = "pkg"

assets-dir = "public"
style-file = "input.css"
# tailwind-input = "input.css"
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

[dev-dependencies]
rstest.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
