[package]
name = "telegram"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
origa = { path = "../origa" }

tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
chrono.workspace = true
async-trait.workspace = true

anyhow = "1.0"
once_cell = "1.21"
tracing-subscriber = "0.3"
teloxide = { version = "0.17", features = ["macros"] }
