[package]
name = "tokenizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "tokenizer"
path = "src/main.rs"

[[bin]]
name = "ndlocr"
path = "src/bin/ndlocr.rs"

[[bin]]
name = "tokenize_well_known"
path = "src/bin/tokenize_well_known.rs"

[[bin]]
name = "find_missing_vocabulary"
path = "src/bin/find_missing_vocabulary.rs"

[dependencies]
origa = { path = "../origa" }
clap.workspace = true
flate2.workspace = true
image.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
futures.workspace = true
